# MuTopia

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPING.md  Dockerfile  LICENSE  README.rst  index.html  setup.cfg
.github/workflows/: docker.yml  docs.yml  publish.yml
conda/: README.md  meta.yaml
encode_analysis/: Makefile  base_config.yaml  download_encode.py  get_uberon_terms.py  write_config.py
encode_analysis/annotations/: 41588_2024_1659_MOESM5_ESM.xlsx
latest/: genindex.html  getting_started.html  index.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_sources/: index.rst.txt
latest/api/: gtensor.html  index.html
latest/tutorials/: 1.building_a_gtensor.html  1.building_a_gtensor.ipynb  3.training_models.ipynb  6.genome_browser_plotting.html  index.html
mutopia/: __init__.py  dtypes.py  feature_preprocessing.py  lib.py  palettes.py  simulate.py  tools.py  tuning.py  utils.py
mutopia/analysis/: __init__.py
mutopia/cli/: core.py  fragments.py  gensor_core.py  gtensor_cli.py  ingestion.py  model.py  model_cli.py  model_core.py  pipeline_config.py  pipeline_tasks.py  sbs.py  sbs_cli.py
mutopia/corpus/: __init__.py  disk_interface.py  gtensor.py  interfaces.py  xarr.py  xarr_extensions.py
mutopia/genome_utils/: bed12_utils.py  coarsen_regions.py  (+2 more)
stable/: getting_started.html  index.html  searchindex.js
v1.0.1/: genindex.html  getting_started.html
v1.0.3/: index.html  objects.inv  py-modindex.html
v1.0.4/: search.html
v1.0.5/: objects.inv  py-modindex.html
v1.0.6/: .buildinfo  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  searchindex.js
v1.0.7/: getting_started.html  index.html  objects.inv  search.html
website/: Makefile  README.md  requirements.txt
(+219 files in other folders)
