[metadata]
name = mutopia
version = attr: mutopia.__version__
author = Allen Lynch
author_email = allenlynch@g.harvard.edu
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    scipy>=1.7
    numpy>=1.21
    matplotlib>=3.5
    scikit-learn==1.4.2
    h5py>=3.8
    optuna>=3.4.0,<5
    pandas>=2.1.0,<3
    pyfaidx
    tqdm
    seaborn

#[options.entry_points]
#console_scripts =
#    locusregression = locusregression.cli:main

[options.package_data]
* = *.json
    *.ini

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
