[metadata]
name = mutopia
version = attr: mutopia.__version__
author = Allen Lynch
author_email = allenlynch@g.harvard.edu
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3


[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    scipy>=1.7,<2
    numpy>=1.21
    matplotlib>=3.5,<4
    scikit-learn==1.4.2
    xarray==2024.9.0
    optuna>=3.4.0,<5
    pandas>=2.1.0
    sparse>=0.15.4
    numba>=0.60.0,<1
    netCDF4>=1.7.1.post2,<2
    pyfaidx
    tqdm
    click
    tabulate
    luigi>=3.3.0
    pydantic>=2.0.0
    pyyaml>=6.0.0


[options.entry_points]
console_scripts =
    gtensor = mutopia.cli.gtensor_cli:gtensor_cli
    topo-model = mutopia.cli.model_cli:model
    mutopia = mutopia.cli.sbs_cli:sbs


[options.package_data]
* = *.json
    *.ini


[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
